<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Profil">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@drawable/profile_colors"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/photo"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_gravity="center"
                        android:padding="5dp"
                        android:src="@drawable/profile" />

                    <ImageButton
                        android:id="@+id/btnSelectPhoto"
                        android:layout_width="38dp"
                        android:layout_height="38dp"
                        android:layout_gravity="bottom"
                        android:background="@android:color/transparent"
                        android:layout_marginBottom="15dp"
                        android:src="@drawable/ic_camera"
                        android:clickable="true"/>

                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="10dp"
                        android:src="@android:drawable/ic_menu_edit" />

                    <TextView
                        android:id="@+id/txtV_modifier_profil"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="Modifier le profil"
                        android:textColor="#fff"
                        android:textSize="16sp" />

                </LinearLayout>


            </LinearLayout>

            <TextView
                android:id="@+id/tvNom"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="start|left"
                android:textColor="#fff"
                android:textSize="16sp" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottom_navigation_view" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txtV_info_gen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="Informations générales"
                    android:textColor="@color/blue" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtV_nom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="Nom :"
                        android:textColor="@color/black" />

                </LinearLayout>

                <EditText
                    android:id="@+id/editNom"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/rect_profile"
                    android:gravity="center_vertical"
                    android:hint="Nom"
                    android:inputType="text"
                    android:paddingLeft="10dp"
                    android:textSize="16dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtV_adresse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="Adresse courriel :"
                        android:textColor="@color/black" />

                </LinearLayout>

                <EditText
                    android:id="@+id/editAdr"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/rect_profile"
                    android:gravity="center_vertical"
                    android:hint="Adresse courriel"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="10dp"
                    android:textSize="16dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtV_bio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="Biographie :"
                        android:textColor="@color/black" />

                </LinearLayout>

                <EditText
                    android:id="@+id/editBio"
                    android:layout_width="match_parent"
                    android:layout_height="86dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/rect_profile"
                    android:gravity="top|left"
                    android:hint="Biographie"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:paddingLeft="10dp"
                    android:scrollbars="vertical"
                    android:textSize="16dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:layout_height="wrap_content"
                    android:elevation="15dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn_save"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/profile_colors"
                        android:gravity="center"
                        android:hint="Sauvegarder"
                        android:padding="8dp"
                        android:textColorHint="#fff"
                        android:textSize="16sp"
                        app:backgroundTint="@null"
                        android:onClick="sauvegarder" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/CtInteret"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginTop="20dp"
                        android:text="Selectionnez des catégories vous correspondant :"
                        android:textColor="@color/black"
                        android:textSize="17dp" />

                    <com.google.android.flexbox.FlexboxLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/CtInteret"
                        android:layout_marginTop="10dp"
                        android:clipToOutline="true"
                        android:orientation="horizontal"
                        app:flexWrap="wrap">

                        <com.google.android.material.chip.Chip
                            style="@style/Widget.MaterialComponents.Chip.Action"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:text="@string/noms_tag_restaurant"
                            app:chipBackgroundColor="@drawable/tag_colors" />


                        <com.google.android.material.chip.Chip
                            style="@style/Widget.MaterialComponents.Chip.Action"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:text="@string/noms_tag_bar"
                            app:chipBackgroundColor="@drawable/tag_colors" />

                        <com.google.android.material.chip.Chip
                            style="@style/Widget.MaterialComponents.Chip.Action"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:text="@string/noms_tag_unesco"
                            app:chipBackgroundColor="@drawable/tag_colors" />

                        <com.google.android.material.chip.Chip
                            style="@style/Widget.MaterialComponents.Chip.Action"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:text="@string/noms_tag_espacesverts"
                            app:chipBackgroundColor="@drawable/tag_colors" />

                        <com.google.android.material.chip.Chip
                            style="@style/Widget.MaterialComponents.Chip.Action"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:text="@string/noms_tag_voyage"
                            app:chipBackgroundColor="@drawable/tag_colors" />

                        <com.google.android.material.chip.Chip
                            style="@style/Widget.MaterialComponents.Chip.Action"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:text="@string/noms_tag_fastfood"
                            app:chipBackgroundColor="@drawable/tag_colors" />

                        <com.google.android.material.chip.Chip
                            style="@style/Widget.MaterialComponents.Chip.Action"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:text="@string/noms_tag_culture"
                            app:chipBackgroundColor="@drawable/tag_colors" />

                        <com.google.android.material.chip.Chip
                            style="@style/Widget.MaterialComponents.Chip.Action"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:text="@string/noms_tag_atypique"
                            app:chipBackgroundColor="@drawable/tag_colors" />

                        <com.google.android.material.chip.Chip
                            style="@style/Widget.MaterialComponents.Chip.Action"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:text="@string/noms_tag_ludique"
                            app:chipBackgroundColor="@drawable/tag_colors" />

                        <com.google.android.material.chip.Chip
                            style="@style/Widget.MaterialComponents.Chip.Action"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:text="@string/noms_tag_bio"
                            app:chipBackgroundColor="@drawable/tag_colors" />

                        <com.google.android.material.chip.Chip
                            style="@style/Widget.MaterialComponents.Chip.Action"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:text="@string/noms_tag_pmr"
                            app:chipBackgroundColor="@drawable/tag_colors" />

                        <com.google.android.material.chip.Chip
                            style="@style/Widget.MaterialComponents.Chip.Action"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:text="@string/noms_tag_gastronomie"
                            app:chipBackgroundColor="@drawable/tag_colors" />

                        <com.google.android.material.chip.Chip
                            style="@style/Widget.MaterialComponents.Chip.Action"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:text="@string/noms_tag_actsportives"
                            app:chipBackgroundColor="@drawable/tag_colors" />

                        <com.google.android.material.chip.Chip
                            style="@style/Widget.MaterialComponents.Chip.Action"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:text="@string/noms_tag_monuments"
                            app:chipBackgroundColor="@drawable/tag_colors" />

                    </com.google.android.flexbox.FlexboxLayout>

                </LinearLayout>

            </LinearLayout>


        </ScrollView>


    </LinearLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_view"
        app:labelVisibilityMode="labeled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/blue"
        app:itemIconTint="@drawable/bottom_nav_colors"
        app:itemTextColor="@drawable/bottom_nav_colors"
        app:menu="@menu/bottom_nav_menu" />
</RelativeLayout>
